# dygma-focus

./: .gitignore  Cargo.toml  LICENSE  README.md  tag_release.sh
.github/workflows/: Publish.yml  PublishCli.yml  PublishCrates.yml  TestBuild.yml
.nvim/: Example.lua
.run/: Test.run.xml
cli/: Cargo.toml
cli/src/: main.rs
crates/cli/: Cargo.toml
crates/focus/: Cargo.toml
crates/focus/src/: api.rs  color.rs  enums.rs  errors.rs  helpers.rs  lib.rs  prelude.rs  settings.rs
crates/focus/src/hardware/: mod.rs
crates/focus/src/hardware/types/: hardware_physical.rs  hardware_virtual.rs  mod.rs
crates/focus/src/platform/: mod.rs  posix.rs  wasm.rs  windows.rs
crates/proc_macros/: Cargo.toml
crates/proc_macros/src/: lib.rs
custom_macros/: Cargo.toml
dygma_focus/: Cargo.toml
dygma_focus/src/: api.rs  color.rs  configuration.rs  enums.rs  helpers.rs  keyboards.rs  lib.rs  prelude.rs
dygma_focus_proc_macros/: Cargo.toml
dygma_focus_proc_macros/src/: lib.rs
dygma_focus_test/: Cargo.toml
dygma_focus_test/src/: main.rs
example/: Cargo.toml
example/src/: app.rs  components.rs  lib.rs  main.rs
focus/: Cargo.toml
focus/src/: api.rs  color.rs  enums.rs  helpers.rs  lib.rs  prelude.rs  settings.rs  structs.rs
focus/src/hardware/: mod.rs
focus/src/hardware/types/: hardware_physical.rs  hardware_virtual.rs
focus_test/: Cargo.toml
focus_test/src/: main.rs
proc_macros/: Cargo.toml
src/: devices.rs  layer.rs  lib.rs  structs.rs
