[workspace]
resolver = "2"
members = [
    "crates/focus",
    "crates/proc_macros",
    "cli",
    "example"
]

[profile.release]
opt-level = "z"         # Optimize for size.
lto = true              # Enable Link Time Optimization.
codegen-units = 1       # Reduce the number of codegen units to enhance optimization.
strip = true            # Remove symbol information for a smaller binary.
panic = "abort"         # Aborts on panic, reducing the binary size.
incremental = false     # Disable incremental compilation.
overflow-checks = false # Disable overflow checks if not required (unsafe).

[profile.dev.package."*"]
opt-level = 2
