[package]
name = "dygma"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true
license-file = "../LICENSE"
readme = "../README.md"
publish = false

[dependencies]
dygma_focus = { path = "../crates/focus", default-features = false, features = [
    "is_async",
] }
anyhow = "1.0"
clap = { version = "4.5", features = [ "derive" ] }
tokio = "1.43"
