[package]
name = "dygma_focus"
version = "0.1.1"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
description = "Dygma Focus API, for use with Dygma keyboards"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[dependencies]
anyhow = "1.0"
dygma_focus_proc_macros = { version = "0.1.0", path = "../dygma_focus_proc_macros" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serialport = "4.3"
tracing = "0.1"
