[package]
name = "dygma_focus_proc_macros"
version = "0.1.0"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
description = "Dygma Focus proc macros"
edition = "2021"
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
