[package]
name = "dygma_focus_proc_macros"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
description = "Dygma Focus API, proc macros"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
