[package]
name = "example"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]

[dependencies]
dygma_focus = { version = "0.4", default-features = false, features = ["is_sync"] }
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts",
    "glow",
] }

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 2
