[package]
name = "example"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
publish = false

[dependencies]
dygma_focus = { path = "../focus", default-features = false, features = [
    "is_sync",
] }
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
] }
