[package]
name = "example"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true
license-file = "../LICENSE"
readme = "../README.md"
publish = false

[dependencies]
dygma_focus = { path = "../crates/focus", default-features = false, features = [
    "is_sync",
] }
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
] }
