[package]
name = "dygma_focus_proc_macros"
version = "0.4.6"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
description = "Dygma Focus API, proc macros"
license-file = "../LICENSE"
repository = "https://github.com/mbwilding/dygma-focus-api-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
