[package]
name = "dygma_focus"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
readme = "../../README.md"

[dependencies]
anyhow = "1.0"
dygma_focus_proc_macros = { version = "0.4", path = "../proc_macros" }
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"], optional = true }
serialport = "4.7"
tracing = "0.1"
windows = { version = "0.60", features = [
    "Devices_SerialCommunication",
    "Win32_Devices_SerialCommunication",
] }

[features]
serde = ["dep:serde"] # Enables serialization
serde_camel_case = [] # When serializing, the fields will be camel case
