[package]
name = "dygma_focus"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
readme = "../../README.md"

[dependencies]
dygma_focus_proc_macros = { version = "0.5", path = "../proc_macros" }
lazy_static = "1.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0"
windows = { version = "0.60", features = [
    "Devices_SerialCommunication",
    "Win32_Devices_SerialCommunication",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serialport = "4.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["SerialPort"] }

[features]
serde = ["dep:serde"] # Enables serialization
serde_camel_case = [] # When serializing, the fields will be camel case
