[package]
name = "dygma_focus_proc_macros"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true
license-file = "../../LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
